name:          aim
version:       0.1.0.0
synopsis:      A DSL for generating assembly code.

description: Aim is a DSL implemented in haskell to generate assembly
  language. It is largely inspired by Daniel Bernstein's
  qhasm. However, implementing it as a DSL would give the entire power
  of Haskell at our disposal.

license:       BSD3
license-file:  LICENSE
author:        Piyush P Kurur
maintainer:    ppk@cse.iitk.ac.in
copyright:
build-type:    Simple
cabal-version: >=1.9.2


bug-reports: https://github.com/piyush-kurur/aim/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz

library
  build-depends: base                     >= 4.5   && <  4.7
               , text                     >= 0.11  && <  0.12
  ghc-options: -Wall
  exposed-modules: Aim
                 , Aim.Machine
